--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,10 +32,11 @@
                             </div>
 
                             <div>
-                                <p class="mb-0">Don't have an account? <a routerLink="/newUser" class="text-white-50 fw-bold">Sign Up</a>
+                                <p class="mb-0">Don't have an account? <a [routerLink]="['/newUser']" class="text-white-50 fw-bold">Sign Up</a>
                                 </p>
                             </div>
 
+                            
                         </div>
                     </div>
                 </div>
@@ -43,4 +44,7 @@
         </div>
     </section>
 
+    <router-outlet></router-outlet>
 </form>
+
+
