--- a/src/app/edit-user/edit-user.component.html
+++ b/src/app/edit-user/edit-user.component.html
@@ -1,1 +1,84 @@
-<p>edit-user works!</p>
+<section class="vh-100 gradient-custom">
+    <div class="container py-5 h-100">
+        <div class="row justify-content-center align-items-center h-100">
+            <div class="col-12 col-lg-9 col-xl-7">
+                <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
+                    <div class="card-body p-4 p-md-5">
+                        <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Edit User</h3>
+                        <form [formGroup]="editUserForm" (ngSubmit)="onEditUserSubmit()">
+
+                            <div class="row">
+                                <div class="col-md-6 mb-4">
+
+                                    <div class="form-outline">
+                                        <input type="text" id="username" class="form-control form-control-lg"
+                                            name="name" formControlName="name" />
+                                        <label class="form-label" for="username">Name</label>
+                                    </div>
+
+                                    <div *ngIf="editUserForm.value.name == '' " class="alert alert-danger">
+                                        <div>Name is required.</div>
+                                    </div>
+
+                                </div>
+                               
+
+                                <div class="col-md-6 mb-4">
+
+                                    <div class="form-outline">
+                                        <input type="email" id="emailAddress" class="form-control form-control-lg" formControlName="email"
+                                            name="email"  required />
+                                        <label class="form-label" for="emailAddress">Email</label>
+                                    </div>
+
+                                 
+
+                                      <div *ngIf="editUserForm.value.email== '' " class="alert alert-danger">
+                                        <div>Email is required.</div>
+                                    </div> 
+
+                                   
+                                      
+                                </div>
+                            </div>
+
+                            <div class="row">
+                               
+                                <div class="col-md-6 mb-4">
+
+                                    <h6 class="mb-2 pb-1">Gender: </h6>
+
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="gender" formControlName="gender"
+                                              id="femaleGender"  value="female" />
+                                        <label class="form-check-label" for="femaleGender">Female</label>
+                                    </div>
+
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="gender" formControlName="gender"
+                                             id="maleGender"  value="male" />
+                                        <label class="form-check-label" for="maleGender">Male</label>
+                                    </div>
+
+                                    <div *ngIf="editUserForm.value.gender.touched && editUserForm.value.gender.invalid" class="alert alert-danger">
+                                        <div *ngIf="editUserForm.value.gender.errors.required">Gender is required.</div>
+                                    </div>
+
+                                </div>
+                            </div>
+
+                            
+
+
+
+                            <div class="mt-4 pt-2">
+                                <input class="btn btn-primary btn-lg" type="submit" value="Submit" [disabled]="!editUserForm.valid"/>
+                            </div>
+
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
