--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,27 +1,37 @@
-<table class="table table-hover">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">#Id</th>
-        <th scope="col">Name</th>
-        <th scope="col">Email</th>
-        <th scope="col">Gender</th>
-        <th scope="col">Status</th>
-        <th></th>
-       
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let user of Users">
-        <td>{{user.id}}</td>
-        <td>{{user.name}}</td>
-        <td>{{user.email}}</td>
-        <td>{{user.gender}}</td>
-        <td>{{user.status}}</td>
-        <td>
-          <button class="btn btn-danger m-1" (click)="remove(user.id)">Delete</button>
-          <button class="btn btn-primary m-1" (click)="edit(user.id)">Edit</button>
-        </td>
-       
-      </tr>
-    </tbody>
-  </table>
+<nav class="navbar navbar-light bg-light justify-content-center">
+  <span class="navbar-brand mb-0 h1">Innovasyst Demo App</span>
+</nav>
+
+<div class="container">
+  
+  <table class="table table-hover mb-4">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">#Id</th>
+          <th scope="col">Name</th>
+          <th scope="col">Email</th>
+          <th scope="col">Gender</th>
+          <th scope="col">Status</th>
+          <th></th>
+         
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let user of Users">
+          <td>{{user.id}}</td>
+          <td>{{user.name}}</td>
+          <td>{{user.email}}</td>
+          <td>{{user.gender}}</td>
+          <td>{{user.status}}</td>
+          <td>
+            <button class="btn btn-danger m-1" (click)="remove(user.id)">Delete</button>
+            <button class="btn btn-primary m-1" (click)="edit(user.id)">Edit</button>
+          </td>
+         
+        </tr>
+      </tbody>
+    </table>
+
+    <h3>Total:{{this.totalRows}}</h3>
+
+</div>
