--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -12,7 +12,9 @@
         <th scope="col">Email</th>
         <th scope="col">Gender</th>
         <th scope="col">Status</th>
-        <th></th>
+        <th>
+          <a [routerLink]="'/newUser'"><b>New User</b></a>
+        </th>
 
       </tr>
     </thead>
